--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,28 @@ frontend/.idea/.gitignore
 frontend/.idea/frontend.iml
 frontend/.idea/modules.xml
 frontend/.idea/vcs.xml
+
+.DS_Store
+node_modules
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
